# GPU_LAB

./: .gitignore  OpenCLExercise4_VolumeRendering.kdev4  README.md  ct-volume-reconstruction.kdev4  meson.build
clFFT/: build_clfft.sh
lib/: meson.build
lib/CT/: DataFiles.hpp  meson.build
lib/HDF5/: meson.build
lib/Math/: Vector2.hpp  Vector3.hpp
python/: Topic4_CTreconstruction_3 2.py  Topic4_CTreconstruction_3.py
src/: CTSVolumeReconstruction.cl  CTSVolumeReconstruction.cpp
src/cpu/: cpu_recon.cpp  cpu_recon.hpp
src/gpu_fft/: hilbert_fft.cpp  hilbert_fft.hpp
src/io/: HDF5IO.cpp  HDF5IO.hpp
